--- a/resources/sass/chat.scss
+++ b/resources/sass/chat.scss
@@ -1,12 +1,12 @@
 body {
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #ffcccc;
+  background-color: #f3f3f2;
   color: #333333;
 }
 
 .navbar-laravel {
-  background-color: #cc3366;
+  background-color: #44617b;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
